# pytorch-studies

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
section01_numpy_ml/notebooks/: Linear_Regression_For_Classification.ipynb  Numpy_KMeans.ipynb  load.py
section02_pytorch_basics/notebooks/: Pytorch1_KMeans.ipynb  Pytorch2_Linear_Logistic_Regression_For_Classification.ipynb  Tutorial1_Pytorch_Basics.ipynb
section03_pytorch_mlp/notebooks/: Pytorch0_Activation_Functions.ipynb  Pytorch1_MLP_Function_Approximation.ipynb  Pytorch2_MLP_MNIST_Classification.ipynb
section04_pytorch_cnn/notebooks/: Pytorch1_CNN_LeNet5.ipynb  Tutorial_Convolutions.ipynb
section05_transfer_learning/notebooks/: Pytorch1_Transfer_Learning.ipynb  Tutorial_Residual_and_Skip_Connections.ipynb
section06_pretraining_augmentations/notebooks/: Pytorch1_Augmentations_and_Learning_Rates.ipynb  Pytorch2_Unsupervised_PreTraining.ipynb
section07_autoencoders/notebooks/: Pytorch1_Autoencoders.ipynb  Pytorch2_Variational_Autoencoders.ipynb
section12_sequential/solutions/: Pytorch1_Autoregressive_MLP.ipynb  Pytorch2_Autoregressive_RNN.ipynb  Pytorch2_Autoregressive_RNN_NoFeedback.ipynb  Pytorch3_Autoregressive_LSTM.ipynb  Pytorch4_Autoregressive_LSTM_Seqence.ipynb  Pytorch5_LSTM_Many_To_One.ipynb
