[project]
name = "pytorch-studies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.5",
    "einops>=0.8.1",
    "gym>=0.26.2",
    "imageio>=2.37.0",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchtext>=0.18.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
